fixed issues with map not showing up

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,9 @@ a:visited {
     top: 0;
     height: 100vh;
     width: 100vw;
-    position: fixed;
+    position: sticky;
+    z-index: -5;
+    overflow-x:hidden;
 }
 
 #header {
@@ -87,8 +89,11 @@ a:visited {
 }
 
 .dark {
-    color: #fafafa;
     background-color: #444;
+
+    p {
+        color: #fafafa !important;
+    }
 }
 
 .step {
@@ -105,6 +110,7 @@ a:visited {
     padding: 25px 50px;
     line-height: 30px;
     font-size: 20px;
+    color:white !important;
 }
 
 .step img {
